--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,43 @@ flutter:
     - assets/images/anytime-logo-s.png
 
   fonts:
+    - family: IBMPlexSans
+      fonts:
+        - asset: assets/fonts/IBMPlexSans-Thin.otf
+          weight: 100
+        - asset: assets/fonts/IBMPlexSans-ThinItalic.otf
+          weight: 100
+          style: italic
+        - asset: assets/fonts/IBMPlexSans-ExtraLight.otf
+          weight: 200
+        - asset: assets/fonts/IBMPlexSans-ExtraLightItalic.otf
+          weight: 200
+          style: italic
+        - asset: assets/fonts/IBMPlexSans-Light.otf
+          weight: 300
+        - asset: assets/fonts/IBMPlexSans-LightItalic.otf
+          weight: 300
+          style: italic
+        - asset: assets/fonts/IBMPlexSans-Regular.otf
+          weight: 400
+        - asset: assets/fonts/IBMPlexSans-Italic.otf
+          weight: 400
+          style: italic
+        - asset: assets/fonts/IBMPlexSans-Medium.otf
+          weight: 500
+        - asset: assets/fonts/IBMPlexSans-MediumItalic.otf
+          weight: 500
+          style: italic
+        - asset: assets/fonts/IBMPlexSans-SemiBold.otf
+          weight: 600
+        - asset: assets/fonts/IBMPlexSans-SemiBoldItalic.otf
+          weight: 600
+          style: italic
+        - asset: assets/fonts/IBMPlexSans-Bold.otf
+          weight: 700
+        - asset: assets/fonts/IBMPlexSans-BoldItalic.otf
+          weight: 700
+          style: italic
     - family: SpaceMonoRegular
       fonts:
         - asset: assets/fonts/SpaceMono-Regular.ttf
